Fix Custom tables overflow bug (#141)
* Update EditProjectModal.js

arrow notation

* Fix overflow bug in Firefox

Inputs for custom tables overflows. I set their min-width style to 0.

Resolves #139

--- a/expo/src/Admin.css
+++ b/expo/src/Admin.css
@@ -107,6 +107,7 @@ h5 {
 
 .custom-table-assignment-child {
   flex-basis: 6rem;
+  min-width: 0;
 }
 
 .upload-btn-wrapper {
